# QREM

./: .gitignore  .gitmodules  DetectorTomography.py  DetectorTomographyFitter.py  Error_Mitigation_Tutorial.ipynb  LICENSE.txt  LICENSE_TEXT  QDTErrorMitigator.py  QDT_Tutorial.ipynb  README.md  __init__.py  ancillary_functions.py  optional_requirementstxt  povmtools.py  pyproject.toml  qiskit_utilities.py  quantum_tomography_Rigetti.py  quantum_tomography_qiskit.py  requirements.txt
DDOT_module/: functions_DDOT_families_heuristics.py  functions_circuits_definition.py  functions_construction.py  functions_data_analysis.py  functions_data_visualization.py  functions_noise_model_analysis.py
DDOT_module/child_classes/: correction_data_generator.py  ddot_marginal_analyzer_vanilla.py  ddt_marginal_analyzer_vanilla.py  global_noise_matrix_creator.py  marginals_corrector.py  noise_model_generator_vanilla.py
DDOT_module/examples/: 01_DDOT_results_pre_processing.py  02_noise_model_analysis.py  03_generating_correction_data.py  04_correcting_marginals.py  04_whole_workflow_noise_modeling.py  05_correcting_marginals.py
DDOT_module/functions/: depreciated_functions.py  functions_circuits_definition.py  functions_data_analysis.py  functions_data_visualization.py  functions_noise_model_analysis.py  functions_noise_model_heuristic.py
DDOT_module/generating_artificial_data/: helper_functions.py  no_clusters_noise_model.py
DDOT_module/parent_classes/: marginals_analyzer_base.py  marginals_analyzer_interface.py
DDOT_module/some_testing/: picklowanie.py  testing_marginals_processing.py  tests_1.py  tests_noise_matrices_marginal.py
QDT_module/: DetectorTomography.py  QDTErrorMitigator.py  quantum_tomography_Rigetti.py  quantum_tomography_qiskit.py
QREM/: __init__.py
QREM/PyMaLi/: GeneralTensorCalculator.py  GeneralTensorCalculatorExamples.py  countTensor.py
QREM/base_classes/: marginals_analyzer_base.py  marginals_analyzer_interface.py
QREM/functions/: functions_data_visualization.py  functions_noise_model_analysis.py
QREM/functions_qrem/: ancillary_functions.py  functions_data_analysis.py  functions_noise_model_analysis.py  functions_noise_model_heuristic.py  povmtools.py
QREM/noise_mitigation/: CorrectionDataGenerator.py  MarginalsCorrector.py  QDTErrorMitigator.py
Tutorials/QDT/: Error_Mitigation_Tutorial.ipynb  QDT_Tutorial.ipynb
base_classes/: marginals_analyzer_base.py
docs/source/: QREM.PyMaLi.rst  QREM.Tutorials.rst  QREM.functions_qrem.functions_SDKs.pyquill.rst  QREM.functions_qrem.generating_artificial_data.rst  conf.py  (+6 more)
functions/: ancillary_functions.py  functions_data_analysis.py  functions_data_visualization.py  functions_noise_model_heuristic.py  povmtools.py
noise_mitigation/: CorrectionDataGenerator.py  MarginalsCorrector.py  QDTErrorMitigator.py
tests/: getting_clusters.py  random_functions.py
(+58 files in other folders)
