[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "QREM"
authors = [{name = "Filip B. Maciejewski", email = "filip.b.maciejewski@gmail.com"},{name="Tomek Rybotycki"},{name="Oskar Słowik"},{name="Jan Tuziemski"},{name="Michał Oszmaniec"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
keywords = ["quantum error mitigation", "measurement noise", "readout noise"]
classifiers = [
  "Programming Language :: Python"
]




dependencies = [
"numpy>=1.20.3",
"scipy>=1.6.2",
"tqdm>=4.46.0",
"colorama>=0.4.3",
"qiskit>=0.28.0",
"qiskit-aer>=0.8.2",
"qiskit-aqua>=0.9.4",
"qiskit-ibmq-provider>=0.15.0",
"qiskit-ignis>=0.6.0",
"qiskit-terra>=0.18.0",
]


[project.optional-dependencies]
test = [
  "pyquil>=3.0.0",
  "amazon-braket-default-simulator>=1.1.0.post1,
"amazon-braket-schemas>=1.1.0.post1",
"amazon-braket-sdk>=1.9.5",
]


[project.urls]
repository = "https://github.com/fbm2718/QREM"
