[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
[project]
name = "QREM"
authors = [{name = "Filip B. Maciejewski", email = "filip.b.maciejewski@gmail.com"},{name="Tomek Rybotycki"},{name="Oskar Słowik"},{name="Jan Tuziemski"},{name="Michał Oszmaniec"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
keywords = ["quantum error mitigation", "measurement noise", "readout noise"]
dependencies = [
"numpy >1.20.2",
"scipy >1.6.1",
"tqdm >4.45.99",
"colorama >=0.4.2",
"qiskit >=0.27.99"
]
[project.optional-dependencies]
optional_deps = [
"pyquil >2.9.99",
"amazon-braket-sdk >1.9.4"
]
[project.urls]
repository = "https://github.com/fbm2718/QREM"
